ide - 모듈 컴포넌트, UI 위치 프로젝트 최상단 으로 이동

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AndroidLearning"
 include ':app'
-include ':app:componenttest'
-include ':app:uitest'
+include ':componenttest'
+include ':uitest'
